cmake_minimum_required(VERSION 2.8)
project(helloWorld)
find_package(GLUT)
find_package(OpenGL)
find_package(SDL)
if(OPENGL_FOUND)
	MESSAGE("OpenGL Correctly Found")
	include_directories($(OPENGL_INCLUDE_DIR))
else(OPENGL_FOUND)
	MESSAGE("OpenGL environment missing")
endif(OPENGL_FOUND)
if(GLUT_FOUND)
	MESSAGE("Glut Correctly Found")
	include_directories($(GLUT_INCLUDE_DIR))
else(GLUT_FOUND)
	MESSAGE("Glut environment missing")
endif(GLUT_FOUND)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/brickwall.bmp 
      ${CMAKE_CURRENT_BINARY_DIR}/brickwall.bmp
      @ONLY )
add_executable(${PROJECT_NAME} main.cpp GLScreenCapturer.cpp GLScreenCapturer.h)
target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})